Implemented junit test for MoviesController.class 2